2012-09-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added sample configuration, resolves #40919

2012-06-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed connection process to use NConnect, resolves #37956 (thanks to Christoph Holtermann)
	* Released version 1.0.1

2011-03-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.0.0